--- a/index.html
+++ b/index.html
@@ -58,21 +58,16 @@
 								<label for="name">Horse's Name</label>
 								<input type="text" name="name" id="name" />
 							</div>
-							<form method="post" action="#">
-								<div class="field">
-									<label for="name">Breed</label>
-									<input type="text" name="name" id="name" />
-								</div>
-								<form method="post" action="#">
-									<div class="field ">
-										<label for="name">Name</label>
-										<input type="text" name="name" id="name" />
-									</div>
-									<form method="post" action="#">
-										<div class="field">
-											<label for="name">Name</label>
-											<input type="text" name="name" id="name" />
-										</div>
+							<div class="field ">
+								<label for="name">Breed</label>
+								<input type="text" name="name" id="name" />
+							</div>
+							<div class="field ">
+								<label for="name">Horse's Name</label>
+								<input type="text" name="name" id="name" />
+							</div>
+						</form>
+					</article>
 				</div>
 			</section>
 
