--- a/index.html
+++ b/index.html
@@ -13,80 +13,98 @@
 	</head>
 	<body>
 
-		<!-- Header -->
-			<header id="header">
-				<div class="inner">
-					<a href="index.html" class="logo">Ranch-Hand</a>
-					<nav id="nav">
-						<a href="index.html">Home</a>
-						<a href="generic.html">Track</a>
-						<a href="elements.html">About Us</a>
-					</nav>
-				</div>
+<!-- Header -->
+	<header id="header">
+		<div class="inner">
+			<a href="index.html" class="logo">Ranch-Hand</a>
+				<nav id="nav">
+					<a href="index.html">Home</a>
+					<a href="generic.html">Track</a>
+					<a href="elements.html">About Us</a>
+				</nav>
+			</div>
 			</header>
 			<a href="#menu" class="navPanelToggle"><span class="fa fa-bars"></span></a>
 
-		<!-- Banner -->
-			<section id="banner">
-				<div class="inner">
-					<h1>Ranch-Hand: <span>Welcome to our Ranch!</span></h1>
-					<ul class="actions">
-						<li><a href="#" class="button alt">Get Started</a></li>
-					</ul>
-				</div>
-			</section>
+<!-- Banner -->
+	<section id="banner">
+		<div class="inner">
+			<h1>Ranch-Hand: <span>Welcome to our Ranch!</span></h1>
+				<ul class="actions">
+					<li><a href="#" class="button alt">Get Started</a></li>
+				</ul>
+		</div>
+	</section>
 
-		<!-- One -->
-			<section id="one">
-				<div class="inner">
-					<header>
-						<h2>Magna Etiam Lorem</h2>
-					</header>
-					<p>Suspendisse mauris. Fusce accumsan mollis eros. Pellentesque a diam sit amet mi ullamcorper vehicula. Integer adipiscin sem. Nullam quis massa sit amet nibh viverra malesuada. Nunc sem lacus, accumsan quis, faucibus non, congue vel, arcu, erisque hendrerit tellus. Integer sagittis. Vivamus a mauris eget arcu gravida tristique. Nunc iaculis mi in ante.</p>
+<!-- One -->
+	<section id="one">
+		<div class="inner">
+			<header>
+				<h2>Magna Etiam Lorem</h2>
+			</header>
+				<p>Suspendisse mauris. Fusce accumsan mollis eros. Pellentesque a diam sit amet mi ullamcorper vehicula. Integer adipiscin sem. Nullam quis massa sit amet nibh viverra malesuada. Nunc sem lacus, accumsan quis, faucibus non, congue vel, arcu, erisque hendrerit tellus. Integer sagittis. Vivamus a mauris eget arcu gravida tristique. Nunc iaculis mi in ante.</p>
 					<ul class="actions">
 						<li><a href="#" class="button alt">About Us</a></li>
 					</ul>
-				</div>
-			</section>
+		</div>
+	</section>
 
-		<!-- Two -->
-			<section id="two">
-				<div class="inner">
-					<article>
-						<form method="post" action="#">
-							<div class="field ">
-								<label for="name">Horse's Name</label>
-								<input type="text" name="name" id="name" />
-							</div>
-							<div class="field ">
-								<label for="name">Breed</label>
-								<input type="text" name="name" id="name" />
-							</div>
-							<div class="field ">
-								<label for="name">Horse's Name</label>
-								<input type="text" name="name" id="name" />
-							</div>
-						</form>
-					</article>
-				</div>
-			</section>
+<!-- Two -->
+	<section id="two">
+		<div class="inner">
+			<article>
+				<header>
+					<h2>Enter Horse's Information</h2>
+				</header>
+				<form method="post" action="#">
+					<div class="field ">
+						<label for="name">Horse's Name</label>
+						<input type="text" name="name" id="name" />
+					</div>
+					<div class="field ">
+						<label for="name">Breed</label>
+						<input type="text" name="name" id="name" />
+					</div>
+					<div class="12u$">
+						<label for="name">Feed</label>
+						<div class="select-wrapper">
+							<select name="demo-category" id="demo-category">
+								<option value="">- Choose food  -</option>
+								 	<option value="1">Alfafa</option>
+									<option value="1">Rye grass</option>
+									<option value="1">Timothy Hay</option>
+									<option value="1">Orchard Grass Hay</option>
+							</select>
+						</div>
+					</div>
+					<div class="field ">
+						<label for="name">Enter Specific Needs</label>
+							<textarea name="demo-message" id="demo-message" placeholder="Enter your message" rows="6"></textarea>
+					</div>
+					<ul class="actions">
+						<li><input type="submit" value="Submit" class="alt" /></li>
+					</ul>
+				</form>
+			</article>
+		</div>
+	</section>
 
-		<!-- Three -->
-			<section id="three">
-				<div class="inner">
-					<article>
-						<div class="content">
-							<span class="icon fa-laptop"></span>
-							<header>
-								<h3>Tempus Feugiat</h3>
-							</header>
+<!-- Three -->
+	<section id="three">
+		<div class="inner">
+			<article>
+				<div class="content">
+					<span class="icon fa-laptop"></span>
+						<header>
+							<h3>Tempus Feugiat</h3>
+						</header>
 							<p>Morbi interdum mollis sapien. Sed ac risus. Phasellus lacinia, magna lorem ullamcorper laoreet, lectus arcu.</p>
 							<ul class="actions">
 								<li><a href="#" class="button alt">Learn More</a></li>
 							</ul>
-						</div>
-					</article>
-					<article>
+				</div>
+			</article>
+				<article>
 						<div class="content">
 							<span class="icon fa-diamond"></span>
 							<header>
