--- a/index.html
+++ b/index.html
@@ -40,9 +40,9 @@
 	<section id="one">
 		<div class="inner">
 			<header>
-				<h2>Magna Etiam Lorem</h2>
+				<h2>Care for your horse, and your horse will care for you</h2>
 			</header>
-				<p>Suspendisse mauris. Fusce accumsan mollis eros. Pellentesque a diam sit amet mi ullamcorper vehicula. Integer adipiscin sem. Nullam quis massa sit amet nibh viverra malesuada. Nunc sem lacus, accumsan quis, faucibus non, congue vel, arcu, erisque hendrerit tellus. Integer sagittis. Vivamus a mauris eget arcu gravida tristique. Nunc iaculis mi in ante.</p>
+				<p>Here at our ranch, we know the value of a horse. If you stall with us, we will ensure that your horse will be taken care of the way you would care for yours!</p>
 					<ul class="actions">
 						<li><a href="#" class="button alt">About Us</a></li>
 					</ul>
@@ -77,9 +77,17 @@
 							</select>
 						</div>
 					</div>
+					<div class="select-wrapper">
+						<select name="demo-category" id="demo-category">
+							<option value="">- Choose fruits  -</option>
+								 <option value="1">Apple</option>
+								<option value="1">Carrot</option>
+								<option value="1">Celery</option>
+						</select>
+					</div>
 					<div class="field ">
 						<label for="name">Enter Specific Needs</label>
-							<textarea name="demo-message" id="demo-message" placeholder="Enter your message" rows="6"></textarea>
+							<textarea name="demo-message" id="demo-message" placeholder="Enter message here" rows="6"></textarea>
 					</div>
 					<ul class="actions">
 						<li><input type="submit" value="Submit" class="alt" /></li>
@@ -133,31 +141,10 @@
 
 		<!-- Footer -->
 			<section id="footer">
-				<div class="inner">
-					<header>
-						<h2>Get in Touch</h2>
-					</header>
-					<form method="post" action="#">
-						<div class="field half first">
-							<label for="name">Name</label>
-							<input type="text" name="name" id="name" />
-						</div>
-						<div class="field half">
-							<label for="email">Email</label>
-							<input type="text" name="email" id="email" />
-						</div>
-						<div class="field">
-							<label for="message">Message</label>
-							<textarea name="message" id="message" rows="6"></textarea>
-						</div>
-						<ul class="actions">
-							<li><input type="submit" value="Send Message" class="alt" /></li>
-						</ul>
-					</form>
 					<div class="copyright">
-						&copy; Untitled Design: <a href="https://templated.co/">TEMPLATED</a>. Images <a href="https://unsplash.com/">Unsplash</a>
+						&copy; Untitled Design: <a href="https://templated.co/">TEMPLATED</a>
+						<p id="madeBy">Made by Maxwell, Benjamin, David, Shelly</p>
 					</div>
-				</div>
 			</section>
 
 		<!-- Scripts -->
